# move-mutation-tools

./: .gitignore  Cargo.toml  Cross.toml  MILESTONES_TASKS.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_ARCHITECTURE_ANALYSIS.md  README.md  RELEASE.md  m2.md  project-milestones.md  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: check-and-lint.yml  release.yml  run-tests.yml  test-self-hosted.yml  track-aptos-releases.yml
move-mutation-analyzer/: Cargo.toml
move-mutation-analyzer/src/: main.rs
move-mutation-test/: Cargo.toml  README.md
move-mutation-test/src/: benchmark.rs  cli.rs  lib.rs  main.rs  mutation_test.rs  report.rs
move-mutation-test/tests/: integration_tests.rs  testsuite.rs
move-mutator/: Cargo.toml  README.md
move-mutator/doc/: design.md
move-mutator/src/: cli.rs  compiler.rs  configuration.rs  coverage.rs  lib.rs  main.rs  mutate.rs  operator_filter.rs  output.rs  report.rs
move-mutator/src/operators/: binary.rs  binary_swap.rs  delete_stmt.rs  literal.rs  mod.rs  unary.rs
move-mutator/tests/: basic_tests.rs
move-mutator/tests/move-assets/basic_coin/: Move.toml
move-mutator/tests/move-assets/breakcontinue/: Move.toml  report.txt.mutation-exp
move-mutator/tests/move-assets/breakcontinue/sources/: Break.move  BreakContinue.move  Continue.move
move-mutator/tests/move-assets/check_swap_operator/sources/: StorageAccess.move
move-mutator/tests/move-assets/function_values/: Move.toml  report.txt.mutation-exp
move-mutator/tests/move-assets/poor_spec/: report.txt.spec-exp
move-mutator/tests/move-assets/relative_dep/p1/: Move.toml
move-mutator/tests/move-assets/relative_dep/p1/sources/: Mul.move
move-mutator/tests/move-assets/relative_dep/p2/: Move.toml
move-mutator/tests/move-assets/relative_dep/p2/sources/: MulUse.move
move-mutator/tests/move-assets/same_names/: report.txt.spec-exp
move-mutator/tests/move-assets/simple/: Move.toml  report.txt.exp  report.txt.mutation-exp
move-mutator/tests/move-assets/simple/sources/: BinaryReplacement.move  Negation.move  Operators.move  StillSimple.move  Sum.move
move-mutator/tests/move-assets/simple_move_2_features/: Move.toml  report.txt.mutation-exp  report.txt.spec-exp
move-mutator/tests/move-assets/simple_move_2_features/sources/: Enums.move  FriendVisibility.move  FunctionValues.move  IndexNotation.move  NewCastSyntax.move  Operators.move  PackageVisibility.move  PatternWildcards.move  PositionalStructs.move  ReceiverFuncs.move
move-mutator/tests/move-assets/skip_mutation_examples/: Move.toml
move-mutator/tests/move-assets/skip_mutation_examples/sources/: BasicOps.move
move-spec-test/: Cargo.toml  README.md
move-spec-test/src/: cli.rs  lib.rs  main.rs  prover.rs
move-spec-test/tests/: integration_tests.rs
mutator-common/: Cargo.toml
mutator-common/src/: benchmark.rs  display_report.rs  lib.rs  report.rs  tmp_package_dir.rs
