[workspace]
resolver = "2"

members = [
    "move-mutator",
    "move-spec-test",
    "move-mutation-test",
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Eiger <hello@eiger.co>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-core"
rust-version = "1.78.0"

# These below are necessary for some aptos deps
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
