[workspace]
resolver = "2"

members = [
    "move-mutation-test",
    "move-mutator",
    "move-spec-test",
    "mutator-common",
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Eiger <hello@eiger.co>"]
edition = "2021"
homepage = "https://www.eiger.co/"
license = "Apache-2.0"
publish = false
repository = "https://github.com/eigerco/move-spec-testing"
rust-version = "1.89.0"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
aptos = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
aptos-framework = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
aptos-gas-schedule = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
aptos-vm = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
clap = { version = "4.5", features = ["derive"] }
codespan = "0.11"
codespan-reporting = "0.11"
diffy = "0.3"
datatest-stable = "0.2"
either = "1.9"
fixed = "= 1.25.1" # required by aptos deps
fs_extra = "1.3"
home = "=0.5.9" # required by aptos deps
itertools = "0.13"
log = "0.4"
move-binary-format = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
move-bytecode-source-map = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
move-cli = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
move-command-line-common = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
legacy-move-compiler = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
move-compiler-v2 = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
move-coverage = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
move-ir-types = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
move-model = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
move-mutator = { path = "move-mutator" }
move-package = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
move-prover = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
move-symbol-pool = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
move-unit-test = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
move-vm-runtime = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "aptos-release-v1.35" }
mutator-common = { path = "mutator-common" }
num = "0.4"
num-traits = "0.2"
pretty_env_logger = "0.5"
prettytable-rs = "0.10"
rand = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
stacker = "0.1"
tabled = "0.16"
tempfile = "3.12"
termcolor = "1.1" # aptos deps require 1.1 here

# These below are necessary for some aptos deps
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
# poem-openapi = { git = "https://github.com/poem-web/poem", version = "=5.1.3", rev="f35094f01d9a782645c2ddba1a8be89792c41e42" }
# poem = { git = "https://github.com/poem-web/poem", version = "=3.1.4", rev="f35094f01d9a782645c2ddba1a8be89792c41e4" }
# poem-openapi-derive = { git = "https://github.com/poem-web/poem", version = "=5.1.3", rev="f35094f01d9a782645c2ddba1a8be89792c41e4" }

[patch."https://github.com/aptos-labs/aptos-core.git"]
poem = "=3.1.3"
poem-openapi = "=5.1.2"
poem-openapi-derive = "=5.1.1"
darling = "= 0.20.10"
