[package]
name = "move-mutation-analyzer"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "move-mutation-analyzer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
home = "0.5.11"
log.workspace = true
mutator-common.workspace = true
pretty_env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true
walkdir = "2.5"
