[package]
name = "move-mutation-test"
version = "0.1.0"
authors = ["Eiger <hello@eiger.co>"]

description = "Move mutation unit testing tool"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "move-mutation-test"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
aptos = { git = "https://github.com/aptos-labs/aptos-core.git" }
aptos-framework = { git = "https://github.com/aptos-labs/aptos-core.git" }
aptos-gas-schedule = { git = "https://github.com/aptos-labs/aptos-core.git" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core.git" }
aptos-vm = { git = "https://github.com/aptos-labs/aptos-core.git" }
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
move-cli = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-command-line-common = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-compiler-v2 = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-model = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-mutator = { path = "../move-mutator" }
move-package = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-unit-test = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-vm-runtime = { git = "https://github.com/aptos-labs/aptos-core.git" }
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tabled = "0.15"
tempfile = "3.10"
termcolor = "1.1"

