[package]
name = "move-mutation-test"
version = "0.1.0"
description = "Move mutation unit testing tool"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "move-mutation-test"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
aptos = { workspace = true }
aptos-framework = { workspace = true }
aptos-gas-schedule = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
move-cli = { workspace = true }
move-command-line-common = { workspace = true }
move-compiler-v2 = { workspace = true }
move-model = { workspace = true }
move-mutator = { workspace = true }
move-package = { workspace = true }
move-unit-test = { workspace = true }
move-vm-runtime = { workspace = true }
pretty_env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
tempfile = { workspace = true }
termcolor = { workspace = true }
