[package]
name = "move-mutation-test"
version = "2.1.0"
description = "Move mutation unit testing tool"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "move-mutation-test"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
aptos = { workspace = true }
aptos-framework = { workspace = true }
aptos-gas-schedule = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
clap = { workspace = true }
fs_extra = { workspace = true }
indicatif = { version = "0.18", features = ["rayon"] }
log = { workspace = true }
move-cli = { workspace = true }
move-command-line-common = { workspace = true }
move-compiler-v2 = { workspace = true }
move-model = { workspace = true }
move-mutator = { workspace = true }
move-package = { workspace = true }
move-unit-test = { workspace = true }
move-vm-runtime = { workspace = true }
mutator-common = { workspace = true }
pretty_env_logger = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
termcolor = { workspace = true }

[dev-dependencies]
datatest-stable = { workspace = true }
stacker = { workspace = true }

[[test]]
name = "integration_tests"
harness = false
