[package]
name = "move-mutator"
version = "0.1.0"
authors = ["Eiger <hello@eiger.co>"]

description = "Move mutation tool"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "move-mutator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
codespan = "0.11"
codespan-reporting = "0.11"
diffy = "0.3"
either = "1.9"
itertools = "0.12"
log = "0.4"
fixed = "= 1.25.1"
move-command-line-common = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-compiler = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-compiler-v2 = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-ir-types = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-model = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-package = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-symbol-pool = { git = "https://github.com/aptos-labs/aptos-core.git" }
num-traits = "0.2"
pretty_env_logger = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
termcolor = "1.1"
toml = "0.5"
