[package]
name = "move-spec-test"
version = "0.1.0"
authors = ["Eiger <hello@eiger.co>"]

description = "Move specification testing tool"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "move-spec-test"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tabled = "0.15"
tempfile = "3.10"
termcolor = "1.1"

move-command-line-common = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-model = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-mutator = { path = "../move-mutator" }
move-package = { git = "https://github.com/aptos-labs/aptos-core.git" }
move-prover = { git = "https://github.com/aptos-labs/aptos-core.git" }
